TASK: Fix vhost folder

--- a/container-files/etc/nginx/hosts.d/flow.conf
+++ b/container-files/etc/nginx/hosts.d/flow.conf
@@ -2,7 +2,7 @@
 server {
   listen          80;
   server_name     docker.local;
-  root            /data/web/www/Web;
+  root            /data/www/vhost;
   index           index.php;
 
   include /etc/nginx/conf.d/flow-locations.conf;
