TASK: Set config based on URL

--- a/container-files/etc/nginx/hosts.d/flow.conf
+++ b/container-files/etc/nginx/hosts.d/flow.conf
@@ -5,6 +5,10 @@ server {
   root            /data/www/vhost;
   index           index.php;
 
+  set $context Production;
+  if ($host ~ \bdev\.)    { set $context Development; }
+  if ($host ~ \bbehat\.)  { set $context $context/Behat; }
+
   include /etc/nginx/conf.d/flow-locations.conf;
   include /etc/nginx/conf.d/flow-rewrites.conf;
 
