--- a/container-files/etc/nginx/conf.d/flow-locations.conf
+++ b/container-files/etc/nginx/conf.d/flow-locations.conf
@@ -8,6 +8,7 @@ location / {
 
 location ~ \.php$ {
   include         fastcgi_params;
+  fastcgi_param   FLOW_CONTEXT      $context;
   fastcgi_param   FLOW_REWRITEURLS  1;
   fastcgi_pass    php-upstream;
 }
